# find-portaventura-offers

./: LICENSE  Makefile  README.md  app.js  download_prices.py  find_offers.py  index.html  main.py  portaventura_offers_cli.py  pyproject.toml  styles.css  thunder-collection_Portaventura.json
commands/: download_prices.py  find_offers.py
downloaded_data/: 20231001.json  20231002.json  20231003.json  20231004.json  20231005.json  20231005_2_2.json  20231005_old.json  20231006.json  20231006_2.json  20231006_2_puente.json  20231006_3_puente.json  20231007.json  20231008.json  20231008_2.json  20231009_2.json  20231010_2.json  20231010_3.json  20231011_2.json  20231011_3.json  20231012_2.json  20231012_3.json  20231013_2.json  20231013_3.json  20231014_2.json  20231014_3.json  hotels_20231015_2.json  hotels_20231015_3.json  hotels_20231016_2.json  hotels_20231016_3.json  hotels_20231017_2.json  hotels_20231017_3.json  hotels_20231018_2.json  hotels_20231018_3.json  hotels_20231019_2.json  hotels_20231019_3.json  hotels_20231020_2.json  hotels_20231020_3.json  hotels_20231021_2.json  hotels_20231021_3.json  hotels_20231022_2.json  (+208 more)
src/: main.py
src/commands/: download_hotel_prices.py  download_tickets_prices.py  find_offers.py  occupancy.py  portaventura_occupancy.py  send_offers.py
src/domain/: hotel_rate.py  occupancy.py  portaventura_rates.py
tests/: download_hote_prices_should.py  hotel_rate_should.py  occupancy_should.py  test_download_tickets_prices.py  test_find_offers.py  test_portaventura_occupancy.py  test_send_offers_by_mail.py  test_tickets_prices.py
(+14 files in other folders)
