[tool.poetry]
name = "portaventura-offers"
version = "0.1.0"
description = "Find best prices for Portaventura"
authors = ["Jorge Castro <nikey_es@yahoo.es>"]
maintainers = ["Jorge Castro <nikey_es@yahoo.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.6.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
