[tool.poetry]
name = "portaventura-offers"
version = "0.1.0"
description = "Find best prices for Portaventura"
authors = ["Jorge Castro <nikey_es@yahoo.es>"]
maintainers = ["Jorge Castro <nikey_es@yahoo.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.6.0"
requests = "^2.31.0"
google-auth-oauthlib = "^1.1.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
assertpy = "^1.1"
mockito = "^1.4.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "tests/integration_tests",
    "tests/unit_tests"
]
pythonpath = [
    "src"
]
python_files = ["test_*.py", "*_test.py", "*_should.py", ]
python_classes = ["Test", "Acceptance", "Given"]
python_functions = ["test", "*_test", "when_*", "then_*"]
# addopts = "-v --cov=src --no-cov-on-fail --cov-report=term-missing tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
